GameHandler update + gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 # Visual Studio cache directory
 .vs/
 
+
+.idea
+
 # Gradle cache directory
 .gradle/
 
@@ -71,3 +74,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 .idea/.idea.CatanOnline/.idea/workspace.xml
+
